eureka service add

--- a/activityservice/activityservice/src/main/resources/application.yml
+++ b/activityservice/activityservice/src/main/resources/application.yml
@@ -27,3 +27,9 @@ logging:
   level:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
