--- a/userService/userService/src/main/resources/application.yml
+++ b/userService/userService/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port:8081
+  port: 8081
 
 spring:
   application:
-    name: userservice
+    name: user-service
 
   datasource:
     url: jdbc:mysql://localhost:3306/fitnessdb
@@ -17,3 +17,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+eureka:
+  client:
+    service-Url:
+      defaultZone: http://localhost:8761/eureka/
