--- a/activityservice/activityservice/src/main/resources/application.yml
+++ b/activityservice/activityservice/src/main/resources/application.yml
@@ -23,6 +23,12 @@ spring:
     serialization:
       indent_output: true
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+
 logging:
   level:
     org.hibernate.SQL: DEBUG
@@ -33,3 +39,12 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+
+rabbitmq:
+  exchange:
+    name: fitness.exchange
+  queue:
+    name: activity.queue
+  routing:
+    key: activity.tracking
